--- a/config
+++ b/config
@@ -5,7 +5,7 @@ const config = {
     host: "localhost",
     user: "root",
     password: process.env.DB_PASSWORD,
-    database: "test",
+    database: "logixboard",
     timezone: '+00:00',
   },
 };
